<resources>
    <string name="app_name">Roman Numerals</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="exit">Exit</string>
    <string name="developer">Developer</string>
    <string name="more_apps">More Apps</string>
    <string name="about_us">About us</string>
    <string name="share">Share</string>
    <string name="communicate">Communicate</string>
    <string name="app_icon">App Icon</string>
    <string name="hi_my_name">Hi, My name is Tikam Kumar and I am the boy behind this app.</string>
    <string name="contact_me">If you have any questions or suggestions,do not hesitate to contact me.</string>
    <string name="launcher_icon">Launcher Icon</string>
    <string name="developer_s_signature">Developer\'s Signature</string>
    <string name="tikam_kumar">Tikam Kumar</string>
    <string name="back">back</string>
    <string name="tikamkumar355_gmail_com">tikamkumar355@gmail.com</string>
    <string name="equal">=\n=\n=\n=\n=\n=\n=\n=\n=\n=\n</string>
    <string name="onetitle">1 to 10</string>
    <string name="twotitle">11 to 20</string>
    <string name="threetitle">21 to 30</string>
    <string name="fourtitle">31 to 40</string>
    <string name="fivetitle">41 to 50</string>
    <string name="sixtitle">51 to 60</string>
    <string name="seventitle">61 to 70</string>
    <string name="eighttitle">71 to 80</string>
    <string name="ninetitle">81 to 90</string>
    <string name="tentitle">91 to 100</string>
    <string name="eleventitle">101 to 110</string>
    <string name="twelvetitle">111 to 120</string>
    <string name="thirteentitle">121 to 130</string>
    <string name="fourteentitle">131 to 140</string>
    <string name="fifteentitle">141 to 150</string>
    <string name="sixteentitle">151 to 160</string>
    <string name="seventeentitle">161 to 170</string>
    <string name="eighteentitle">171 to 180</string>
    <string name="ninteentitle">181 to 190</string>
    <string name="twentytitle">191 to 200</string>
    <string name="twentyonetitle">201 to 210</string>
    <string name="twentytwotitle">211 to 220</string>
    <string name="twentythreetitle">221 to 230</string>
    <string name="twentyfourtitle">231 to 240</string>
    <string name="twentyfivetitle">241 to 250</string>
    <string name="twentysixtitle">251 to 260</string>
    <string name="twentyseventitle">261 to 270</string>
    <string name="twentyeighttitle">271 to 280</string>
    <string name="twentyninetitle">281 to 290</string>
    <string name="thirtytitle">291 to 300</string>
    <string name="thirtyonetitle">301 to 310</string>
    <string name="thirtytwotitle">311 to 320</string>
    <string name="thirtythreetitle">321 to 330</string>
    <string name="thirtyfourtitle">331 to 340</string>
    <string name="thirtyfivetitle">341 to 350</string>
    <string name="thirtysixtitle">351 to 360</string>
    <string name="thirtyseventitle">361 to 370</string>
    <string name="thirtyeighttitle">371 to 380</string>
    <string name="thirtyninetitle">381 to 390</string>
    <string name="fourtytitle">391 to 400</string>
    <string name="fourtyonetitle">401 to 410</string>
    <string name="fourtytwotitle">411 to 420</string>
    <string name="fourtythreetitle">421 to 430</string>
    <string name="fourtyfourtitle">431 to 440</string>
    <string name="fourtyfivetitle">441 to 450</string>
    <string name="fourtysixtitle">451 to 460</string>
    <string name="fourtyseventitle">461 to 470</string>
    <string name="fourtyeighttitle">471 to 480</string>
    <string name="fourtyninetitle">481 to 490</string>
    <string name="fiftytitle">491 to 500</string>
    <string name="fiftyonetitle">501 to 510</string>
    <string name="fiftytwotitle">511 to 520</string>
    <string name="fiftythreetitle">521 to 530</string>
    <string name="fiftyfourtitle">531 to 540</string>
    <string name="fiftyfivetitle">541 to 550</string>
    <string name="fiftysixtitle">551 to 560</string>
    <string name="fiftyseventitle">561 to 570</string>
    <string name="fiftyeighttitle">571 to 580</string>
    <string name="fiftyninetitle">581 to 590</string>
    <string name="sixtytitle">591 to 600</string>
    <string name="sixtyonetitle">601 to 610</string>
    <string name="sixtytwotitle">611 to 620</string>
    <string name="sixtythreetitle">621 to 630</string>
    <string name="sixtyfourtitle">631 to 640</string>
    <string name="sixtyfivetitle">641 to 650</string>
    <string name="sixtysixtitle">651 to 660</string>
    <string name="sixtyseventitle">661 to 670</string>
    <string name="sixtyeighttitle">671 to 680</string>
    <string name="sixtyninetitle">681 to 690</string>
    <string name="seventytitle">691 to 700</string>
    <string name="seventyonetitle">701 to 710</string>
    <string name="seventytwotitle">711 to 720</string>
    <string name="seventythreetitle">721 to 730</string>
    <string name="seventyfourtitle">731 to 740</string>
    <string name="seventyfivetitle">741 to 750</string>
    <string name="seventysixtitle">751 to 760</string>
    <string name="seventyseventitle">761 to 770</string>
    <string name="seventyeighttitle">771 to 780</string>
    <string name="seventyninetitle">781 to 790</string>
    <string name="eightytitle">791 to 800</string>
    <string name="eightyonetitle">801 to 810</string>
    <string name="eightytwotitle">811 to 820</string>
    <string name="eightythreetitle">821 to 830</string>
    <string name="eightyfourtitle">831 to 840</string>
    <string name="eightyfivetitle">841 to 850</string>
    <string name="eightysixtitle">851 to 860</string>
    <string name="eightyseventitle">861 to 870</string>
    <string name="eightyeighttitle">871 to 880</string>
    <string name="eightyninetitle">881 to 890</string>
    <string name="nintytitle">891 to 900</string>
    <string name="nintyonetitle">901 to 910</string>
    <string name="nintytwotitle">911 to 920</string>
    <string name="nintythreetitle">921 to 930</string>
    <string name="nintyfourtitle">931 to 940</string>
    <string name="nintyfivetitle">941 to 950</string>
    <string name="nintysixtitle">951 to 960</string>
    <string name="nintyseventitle">961 to 970</string>
    <string name="nintyeighttitle">971 to 980</string>
    <string name="nintyninetitle">981 to 990</string>
    <string name="hundredtitle">991 to 1000</string>
    <string name="roman_numbers_1_to_100">Roman Numbers 1 to 100</string>
    <string name="onetoten">oneToten</string>
    <string name="eletotwn">eleTotwn</string>
    <string name="nintohun">NinToHun</string>
    <string name="roman_numbers_101_to_200">Roman Numbers 101 to 200</string>
    <string name="roman_numbers_201_to_300">Roman Numbers 201 to 300</string>
    <string name="roman_numbers_301_to_400">Roman Numbers 301 to 400</string>
    <string name="roman_numbers_401_to_500">Roman Numbers 401 to 500</string>
    <string name="roman_numbers_501_to_600">Roman Numbers 501 to 600</string>
    <string name="roman_numbers_601_to_700">Roman Numbers 601 to 700</string>
    <string name="roman_numbers_701_to_800">Roman Numbers 701 to 800</string>
    <string name="roman_numbers_801_to_900">Roman Numbers 801 to 900</string>
    <string name="roman_numbers_901_to_1000">Roman Numbers 901 to 1000</string>
    <string name="OneTen">"I\nII\nIII\nIV\nV\nVI\nVII\nVIII\nIX\nX\n"</string>
    <string name="EleTwn">"XI\nXII\nXIII\nXIV\nXV\nXVI\nXVII\nXVIII\nXIX\nXX\n"</string>
    <string name="TwnOneToThirty">"XXI\nXXII\nXXIII\nXXIV\nXXV\nXXVI\nXXVII\nXXVIII\nXXIX\nXXX\n"</string>
    <string name="ThrtyOneToFouty">"XXXI\nXXXII\nXXXIII\nXXXIV\nXXXV\nXXXVI\nXXXVII\nXXXVIII\nXXXIX\nXL\n"</string>
    <string name="FoutyOneToFifty">"XLI\nXLII\nXLIII\nXLIV\nXLV\nXLVI\nXLVII\nXLVIII\nXLIX\nL\n"</string>
    <string name="FiftyOneToSixty">"LI\nLII\nLIII\nLIV\nLV\nLVI\nLVII\nLVIII\nLIX\nLX\n"</string>
    <string name="SixtyOneToSevnty">"LXI\nLXII\nLXIII\nLXIV\nLXV\nLXVI\nLXVII\nLXVIII\nLXIX\nLXX\n"</string>
    <string name="SentyOneToEighty">"LXXI\nLXXII\nLXXIII\nLXXIV\nLXXV\nLXXVI\nLXXVII\nLXXVIII\nLXXIX\nLXXX\n"</string>
    <string name="EightyOneToNinty">"LXXXI\nLXXXII\nLXXXIII\nLXXXIV\nLXXXV\nLXXXVI\nLXXXVII\nLXXXVIII\nLXXXIX\nXC\n"</string>
    <string name="NintyOneToHundred">"XCI\nXCII\nXCIII\nXCIV\nXCV\nXCVI\nXCVII\nXCVIII\nXCIX\nC\n"</string>
    <string name="eleven">"CI\nCII\nCIII\nCIV\nCV\nCVI\nCVII\nCVIII\nCIX\nCX\n"</string>
    <string name="twelve">"CXI\nCXII\nCXIII\nCXIV\nCXV\nCXVI\nCXVII\nCXVIII\nCXIX\nCXX\n"</string>
    <string name="thirteen">"CXXI\nCXXII\nCXXIII\nCXXIV\nCXXV\nCXXVI\nCXXVII\nCXXVIII\nCXXIX\nCXXX\n"</string>
    <string name="fourteen">"CXXXI\nCXXXII\nCXXXIII\nCXXXIV\nCXXXV\nCXXXVI\nCXXXVII\nCXXXVIII\nCXXXIX\nCXL\n"</string>
    <string name="fifteen">"CXLI\nCXLII\nCXLIII\nCXLIV\nCXLV\nCXLVI\nCXLVII\nCXLVIII\nCXLIX\nCL\n"</string>
    <string name="sixteen">"CLI\nCLII\nCLIII\nCLIV\nCLV\nCLVI\nCLVII\nCLVIII\nCLIX\nCLX\n"</string>
    <string name="seventeen">"CLXI\nCLXII\nCLXIII\nCLXIV\nCLXV\nCLXVI\nCLXVII\nCLXVIII\nCLXIX\nCLXX\n"</string>
    <string name="eighteen">"CLXXI\nCLXXII\nCLXXIII\nCLXXIV\nCLXXV\nCLXXVI\nCLXXVII\nCLXXVIII\nCLXXIX\nCLXXX\n"</string>
    <string name="ninteen">"CLXXXI\nCLXXXII\nCLXXXIII\nCLXXXIV\nCLXXXV\nCLXXXVI\nCLXXXVII\nCLXXXVIII\nCLXXXIX\nCXC\n"</string>
    <string name="twenty">"CXCI\nCXCII\nCXCIII\nCXCIV\nCXCV\nCXCVI\nCXCVII\nCXCVIII\nCXCIX\nCC\n"</string>
    <string name="made_by">Made By</string>
    <string name="guldasta">Guldasta</string>
    <string name="icon">Icon</string>
    <string name="range_1_to_10">Range 1 to 10</string>
    <string name="range_11_to_20">Range 11 to 20</string>
    <string name="range_21_to_30">Range 21 to 30</string>
    <string name="range_31_to_40">Range 31 to 40</string>
    <string name="range_41_to_50">Range 41 to 50</string>
    <string name="range_51_to_60">Range 51 to 60</string>
    <string name="range_61_to_70">Range 61 to 70</string>
    <string name="range_71_to_80">Range 71 to 80</string>
    <string name="range_81_to_90">Range 81 to 90</string>
    <string name="range_91_to_100">Range 91 to 100</string>
    <string name="range_101_to_110">Range 101 to 110</string>
    <string name="range_111_to_120">Range 111 to 120</string>
    <string name="range_121_to_130">Range 121 to 130</string>
    <string name="range_131_to_140">Range 131 to 140</string>
    <string name="range_141_to_150">Range 141 to 150</string>
    <string name="range_151_to_160">Range 151 to 160</string>
    <string name="range_161_to_170">Range 161 to 170</string>
    <string name="range_171_to_180">Range 171 to 180</string>
    <string name="range_181_to_190">Range 181 to 190</string>
    <string name="range_191_to_200">Range 191 to 200</string>
    <string name="range_401_to_410">Range 401 to 410</string>
    <string name="range_411_to_420">Range 411 to 420</string>
    <string name="range_421_to_430">Range 421 to 430</string>
    <string name="range_431_to_440">Range 431 to 440</string>
    <string name="range_441_to_450">Range 441 to 450</string>
    <string name="range_451_to_460">Range 451 to 460</string>
    <string name="range_461_to_470">Range 461 to 470</string>
    <string name="range_471_to_480">Range 471 to 480</string>
    <string name="range_481_to_490">Range 481 to 490</string>
    <string name="range_491_to_500">Range 491 to 500</string>
</resources>