<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">

        <item android:title="@string/menu_home">
            <menu>
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/home"
                    android:title="@string/menu_home" />
            </menu>
        </item>
    </group>
    <group
        android:id="@+id/group4"
        android:checkableBehavior="single">

        <item android:title="@string/communicate">
            <menu>
                <item
                    android:id="@+id/send"
                    android:icon="@drawable/ic_baseline_share_24"
                    android:title="@string/share" />
            </menu>
        </item>
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item android:title="@string/about_us">
            <menu>

                <item
                    android:id="@+id/developer"
                    android:icon="@drawable/ic_baseline_developer_mode_24"
                    android:title="@string/developer" />
                <item
                    android:id="@+id/moreApps"
                    android:icon="@drawable/ic_baseline_apps_24"
                    android:title="@string/more_apps" />

            </menu>
        </item>
    </group>

    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">
        <item android:title="@string/exit">
            <menu>
                <item
                    android:id="@+id/exit"
                    android:icon="@drawable/ic_baseline_exit_to_app_24"
                    android:title="@string/exit" />
            </menu>
        </item>
    </group>

</menu>