<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Hundred">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.RomanNumbers.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                app:popupTheme="@style/Theme.RomanNumbers.PopupOverlay">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/back"
                    android:src="@drawable/backspace" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/purple_200"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:textColor="@color/black"
                    android:text="@string/app_name"
                    android:layout_gravity="center"
                    android:fontFamily="serif"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"/>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:ignore="InefficientWeight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/one"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/white"
                android:contentDescription="@string/range_1_to_10"
                android:src="@drawable/img_10" />

            <ImageButton
                android:id="@+id/two"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/white"
                android:contentDescription="@string/range_11_to_20"
                android:src="@drawable/img_11" />

            <ImageButton
                android:id="@+id/three"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/white"
                android:contentDescription="@string/range_21_to_30"
                android:src="@drawable/img_12" />

            <ImageButton
                android:id="@+id/four"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/white"
                android:contentDescription="@string/range_31_to_40"
                android:src="@drawable/img_13" />

            <ImageButton
                android:id="@+id/five"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/white"
                android:contentDescription="@string/range_41_to_50"
                android:src="@drawable/img_14" />

            <ImageButton
                android:id="@+id/six"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/white"
                android:contentDescription="@string/range_51_to_60"
                android:src="@drawable/img_15" />

            <ImageButton
                android:id="@+id/seven"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/white"
                android:contentDescription="@string/range_61_to_70"
                android:src="@drawable/img_16" />

            <ImageButton
                android:id="@+id/eight"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/white"
                android:contentDescription="@string/range_71_to_80"
                android:src="@drawable/img_17" />

            <ImageButton
                android:id="@+id/nine"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/white"
                android:contentDescription="@string/range_81_to_90"
                android:src="@drawable/img_18" />

            <ImageButton
                android:id="@+id/ten"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:contentDescription="@string/range_91_to_100"
                android:src="@drawable/img_19" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#e2e2e2" />

</LinearLayout>