<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TwoHundred">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.RomanNumbers.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                app:popupTheme="@style/Theme.RomanNumbers.PopupOverlay">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/back"
                    android:src="@drawable/backspace" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/purple_200"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:textColor="@color/black"
                    android:text="@string/app_name"
                    android:layout_gravity="center"
                    android:fontFamily="serif"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"/>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:ignore="InefficientWeight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/eleven"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/white"
                android:contentDescription="@string/range_101_to_110"
                android:src="@drawable/img_20" />

            <ImageButton
                android:id="@+id/twelve"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/white"
                android:contentDescription="@string/range_111_to_120"
                android:src="@drawable/img_21" />

            <ImageButton
                android:id="@+id/thirteen"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/white"
                android:contentDescription="@string/range_121_to_130"
                android:src="@drawable/img_22" />

            <ImageButton
                android:id="@+id/fourteen"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/white"
                android:contentDescription="@string/range_131_to_140"
                android:src="@drawable/img_23" />

            <ImageButton
                android:id="@+id/fifteen"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/white"
                android:contentDescription="@string/range_141_to_150"
                android:src="@drawable/img_24" />

            <ImageButton
                android:id="@+id/sixteen"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/white"
                android:contentDescription="@string/range_151_to_160"
                android:src="@drawable/img_25" />

            <ImageButton
                android:id="@+id/seventeen"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/white"
                android:contentDescription="@string/range_161_to_170"
                android:src="@drawable/img_26" />

            <ImageButton
                android:id="@+id/eighteen"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/white"
                android:contentDescription="@string/range_171_to_180"
                android:src="@drawable/img_27" />

            <ImageButton
                android:id="@+id/nineteen"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/white"
                android:contentDescription="@string/range_181_to_190"
                android:src="@drawable/img_28" />

            <ImageButton
                android:id="@+id/twenty"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:contentDescription="@string/range_191_to_200"
                android:src="@drawable/img_29" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#e2e2e2" />

</LinearLayout>